trigger-dependency-injection/main/default/objects/HandlerMethod__mdt/HandlerMethod__mdt.object-meta.xml
<CustomObject>
    <description>Apex methods called by triggers (handlers, service managers...). Record a method as this custom metadata is necessary to relate a handler to the proper calling trigger.</description>
    <label>Handler Method</label>
    <pluralLabel>Handler Methods</pluralLabel>
</CustomObject>