trigger-dependency-injection/main/default/objects/HandlerMethod__mdt/fields/Moments__c.field-meta.xml
<CustomField>
    <fullName>Moments__c</fullName>
    <inlineHelpText>Enter the moment the method shall execute (comma-separated): before, after.</inlineHelpText>
    <label>Moments</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>