trigger-dependency-injection/main/default/objects/HandlerMethod__mdt/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <label>Operation</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>insert</fullName>
                <default>true</default>
                <label>insert</label>
            </value>
            <value>
                <fullName>update</fullName>
            </value>
            <value>
                <fullName>delete</fullName>
            </value>
            <value>
                <fullName>undelete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>