trigger-dependency-injection/main/default/objects/HandlerMethod__mdt/fields/Parameter1__c.field-meta.xml
<CustomField>
    <fullName>Parameter1__c</fullName>
    <label>Parameter 1</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>null</fullName>
            </value>
            <value>
                <fullName>Trigger.new</fullName>
            </value>
            <value>
                <fullName>Trigger.newMap</fullName>
            </value>
            <value>
                <fullName>Trigger.old</fullName>
            </value>
            <value>
                <fullName>Trigger.oldMap</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>