trigger-dependency-injection/main/default/objects/HandlerMethod__mdt/validationRules/NoUndeleteForBeforeTriggers.validationRule-meta.xml
<ValidationRule>
    <fullName>NoUndeleteForBeforeTriggers</fullName>
    <active>true</active>
    <description>Prevent setting &#39;undelete&#39; operation in &#39;after&#39; context.</description>
    <errorConditionFormula>ISPICKVAL(Moment__c, &#39;before&#39;) &amp;&amp; ISPICKVAL(Operation__c, &#39;undelete&#39;)</errorConditionFormula>
    <errorDisplayField>Operation__c</errorDisplayField>
    <errorMessage>&#39;undelete&#39; operation only works in &#39;after&#39; context.</errorMessage>
</ValidationRule>