trigger-dependency-injection/main/default/objects/HandlerMethod__mdt/listViews/Account.listView-meta.xml
<ListView>
    <fullName>Account</fullName>
    <columns>MasterLabel</columns>
    <columns>ClassName__c</columns>
    <columns>MethodName__c</columns>
    <columns>CallingTrigger__c</columns>
    <columns>Moment__c</columns>
    <columns>Operation__c</columns>
    <columns>Parameter1__c</columns>
    <columns>Parameter2__c</columns>
    <columns>IndexOfExecution__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CallingTrigger__c</field>
        <operation>equals</operation>
        <value>Account</value>
    </filters>
    <label>Account</label>
</ListView>